fixed summary overflow responsiveness

--- a/style/style_contacts.css
+++ b/style/style_contacts.css
@@ -60,6 +60,7 @@
 }
 
 .contacts-right-div {
+    overflow: auto;
     position: relative;
     padding-left: 60px;
     padding-top: 80px;
